syntax = 'proto3';

package proto;

service AOBService{
	rpc ParseAndCheckAccess(UserSql) returns (UserSql){}
	rpc ParseSql (Script) returns (ObjScript){}
	rpc CheckAccess(UserSql) returns (UserSql){}
}

message UserSql {
	string user = 1;
	string script = 2;
	ObjScript obj = 3;
}

message Script {
	string script = 1;
}

message ObjScript {
	repeated string tableColumns = 1;
}